my profile page

--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
     <!-- Fontawesome Stylesheet -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
+    <!-- SF Pro Display Font -->
+    <link data-srs="" rel="stylesheet" href="https://www.apple.com/wss/fonts?families=SF+Pro,v3:200,300,400,500,600|SF+Pro+Icons,v3|Apple+Monochrome+Emoji,v3|Apple+Monochrome+Emoji+Ind,v2|Graphik,v1">
   </head>
   <body>
     <div class="container">
       <div class="card">
-        <h1>Hello, I'm Nico 😎</h1>
-        <img src="images/nicolas_ottati-avatar_1.JPG" class="img-circle shadowed" width="100px" alt="Nicolas Ottati Avatar">
+        <h1>Hey there, I'm <span class="txt-primary">Nicolas Ottati.</span></h1>
+        <img src="images/nicolas_ottati-avatar_1.JPG" class="img-circle shadowed" width="180px" alt="Nicolas Ottati Avatar">
         <p id="introduction">I love Front End, UX/UI Design, web-development and of course music 🎶. I joined Le Wagon to learn how to code and be able to work while travelling the world with my music 🌍.</p>
-        <a href="https://lewagon.github.io/html-css-challenges/01-profile-content-new/#" class="btn-blue" target="_blank">Discover Le Wagon</a>
+        <a href="https://lewagon.github.io/html-css-challenges/01-profile-content-new/#" class="btn-primary" target="_blank">Discover Le Wagon</a>
       </div>
       <div class="card">
         <h2>Follow me</h2>
         <ul class="list-inline">
           <li>
             <a href="https://github.com/ottatinicolas91" target="_blank">
-              <i class="fa-brands fa-square-github"></i>
+              <i class="fa-brands fa-github"></i>
             </a>
           </li>
           <li>
